--- a/TPIntegrador/templates/result.html
+++ b/TPIntegrador/templates/result.html
@@ -4,45 +4,60 @@
 
 <div class="container">
   <div class="row justify-content-center text-center">
-
     {%- if life >1 -%}
 
-    <div class="card cardResult ">
-    
-    <div class="col-12 mb-3 my-5" id="winner">
-      <h1 class="textResult mb-3">¡YOU WIN!</h1>
-      <h3 class="mb-3">Terminaste con {{life}} vidas</h3>
-      <h3 class="mb-3">Terminaste con el siguiente puntaje: {{score}} <i class="fa-solid fa-face-laugh-beam text-success"></i></h3>
-    </div>
-    <div class="col-12 mb-5">
-        <img class="gifWin " src="{{ url_for('static', filename='/images/yay.gif') }}" alt="soSad" />
+    <div class="card cardResult">
+      <div class="col-12 mb-3 my-5" id="winner">
+        <h1 class="textResult mb-3">¡YOU WIN!</h1>
+        <h3 class="mb-3">Terminaste con {{life}} vidas</h3>
+        <h3 class="mb-3">
+          Terminaste con el siguiente puntaje: {{score}}
+          <i class="fa-solid fa-face-laugh-beam text-success"></i>
+        </h3>
       </div>
-</div>
+      <div class="col-12 mb-5">
+        <img
+          class="gifWin"
+          src="{{ url_for('static', filename='/images/yay.gif') }}"
+          alt="soSad"
+        />
+      </div>
+    </div>
     {% endif %} {%- if life==1 -%}
 
+    <div class="card cardResult">
+      <div class="col-12 mb-3 my-5" id="loser">
+        <h1 class="textResult mb-3">¡YOU LOSE!</h1>
+        <h3>
+          Tienes {{life-1}} vidas
+          <i class="fa-solid fa-face-sad-cry text-danger"> </i>
+        </h3>
+        <h3 class="mb-3">Terminaste con el siguiente puntaje: {{score}}</h3>
+      </div>
 
-    <div class="card cardResult ">
-    <div class="col-12 mb-3 my-5" id="loser">
-      <h1 class="textResult mb-3">¡YOU LOSE!</h1>
-      <h3  >
-        Tienes {{life-1}} vidas
-        <i class="fa-solid fa-face-sad-cry text-danger"> </i>
-      </h3>
-      <h3 class="mb-3">Terminaste con el siguiente puntaje: {{score}}</h3>
+      <div class="col-12 mb-5">
+        <img
+          class="gif"
+          src="{{ url_for('static', filename='/images/cry.gif') }}"
+          alt="soSad"
+        />
+      </div>
     </div>
-
-    <div class="col-12 mb-5">
-      <img class="gif" src="{{ url_for('static', filename='/images/cry.gif') }}" alt="soSad" />
-    </div>
-</div>
 
     {% endif %}
-    <div class="cols mb-5">
-        <button class="row-cols-1 btn btnReplay mb-3">
+    <form action="{{ url_for('settings_game') }}" method="POST">
+      <div class="cols mb-5">
+        <button
+          type="submit"
+          class="row-cols-1 btn btnReplay mb-3"
+          name="reloadGame"
+          value="true"
+        >
           <i class="fa-solid fa-rotate fs-2"></i>
           VOLVER A JUGAR
         </button>
       </div>
+    </form>
   </div>
 </div>
 {% endblock %}
