links en Layout funcionando

--- a/TPIntegrador/templates/layout.html
+++ b/TPIntegrador/templates/layout.html
@@ -128,10 +128,10 @@
     >
       <ul class="nav col-lg-12 justify-content-around w-75">
         <li class="nav-item">
-          <a href="#" class="nav-link text-white px-3 fs-4">Nosotres</a>
+          <a href="https://linktr.ee/unerdevprogramacion1" class="nav-link text-white px-3 fs-4" target="_blank">Nosotres</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link text-white px-3 fs-4">Repositorio</a>
+          <a href="https://github.com/UNER-DEV/Programacion1" target="_blank" class="nav-link text-white px-3 fs-4">Repositorio</a>
         </li>
       </ul>
     </footer>
