--- a/TPIntegrador/templates/result.html
+++ b/TPIntegrador/templates/result.html
@@ -11,7 +11,7 @@
         <h1 class="textResult mb-3">¡YOU WIN!</h1>
         <h3 class="mb-3">Terminaste con {{life}} vidas</h3>
         <h3 class="mb-3">
-          Terminaste con el siguiente puntaje: {{score}}
+          Terminaste con el siguiente puntaje: {{ (score + life)-1 }}
           <i class="fa-solid fa-face-laugh-beam text-success"></i>
         </h3>
       </div>
